<resources>
    <string name="app_name">My Budget</string>
    <string name="acc_balance">"Account balance: "</string>
    <string name="as_of">" as of "</string>
    <string name="cat_balance">"Category balance: "</string>
    <string name="import_csv">Import .CSV file</string>
    <string name="export_csv">Export .CSV file</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="recurring_trans">Recurring transactions</string>
    <string name="date_filter">%1$s - %2$s to %3$s</string>
    <string name="prompt_datefilter">Select a date filter</string>
    <string name="pay_period">Pay period</string>
    <string name="month">Month</string>
    <string name="custom_period">Custom period</string>
    <string name="all_transactions">All transactions</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="repeat_every">Repeat every</string>
    <string name="expiry_date">Expiry date</string>
    <string name="use_as_pay">Use for pay period filter?</string>
    <string-array name="period_array">
        <item>Week</item>
        <item>Fortnight</item>
        <item>Month</item>
        <item>Quarter</item>
        <item>Year</item>
    </string-array>
    <string name="prompt_cat_name">Category Name</string>
    <string name="prompt_acc_name">Account Name</string>
    <string name="is_reconciled">Reconciled?</string>
    <string name="trans_date">Transaction Date</string>
    <string name="trans_desc">Description</string>
    <string name="trans_est">Establishment</string>
    <string name="trans_acc">Account</string>
    <string name="trans_acc_from">Account from</string>
    <string name="trans_acc_to">Account to</string>
    <string name="trans_amount">Amount</string>
    <string name="trans_cat">Category</string>
    <string name="trans_subcat">Sub-category</string>
    <string name="flag_income">For Income Tax?</string>
    <string name="flag_recurring">Recurring?</string>
    <string name="action_save_trans">Save transaction</string>
    <string name="action_delete_trans">Delete transaction</string>
    <string name="action_clone_trans">Clone transaction</string>
    <string name="add_a_trans">Add a transaction</string>
    <string name="edit_trans">Edit transaction</string>
    <string name="toast_updated">Transaction updated</string>
    <string name="toast_update_failed">Error updating transaction</string>
    <string name="toast_rec_updated">Recurring transaction updated</string>
    <string name="toast_rec_update_failed">Error updating recurring transaction</string>
    <string name="toast_rec_added">Recurring transaction added</string>
    <string name="toast_rec_add_failed">Error adding recurring transaction</string>
    <string name="toast_saved">Transaction saved</string>
    <string name="toast_save_failed">Error saving transaction</string>
    <string name="toast_cat_saved">Category saved</string>
    <string name="toast_cat_save_failed">Error saving category</string>
    <string name="toast_acc_saved">Account saved</string>
    <string name="toast_acc_save_failed">Error saving account</string>
    <string name="toast_cat_updated">Category updated</string>
    <string name="toast_cat_update_failed">Error updating category</string>
    <string name="toast_acc_updated">Account updated</string>
    <string name="toast_failed_acc_update">Error updating account</string>
    <string name="toast_cat_deleted">Category deleted</string>
    <string name="toast_cat_delete_failed">Error deleting category</string>
    <string name="toast_acc_deleted">Account deleted</string>
    <string name="toast_acc_delete_failed">Error deleting account</string>
    <string name="toast_trans_deleted">Transaction deleted</string>
    <string name="toast_trans_delete_failed">Error deleting transaction</string>
    <string name="delete_cat_dialog_msg">Delete this category?</string>
    <string name="delete_acc_dialog_msg">Delete this account?</string>
    <string name="delete_trans_dialog_msg">Delete this transaction?</string>
    <string name="discard_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="swap_dates">"End date" before "start date". Dates have been swapped around.</string>
    <string name="no_desc_or_amount">Your transaction must have a description and an amount.</string>
    <string name="acc_with_trans">Can\'t delete an account with existing transactions. Delete the transactions first, or change their account.</string>
    <string name="cat_with_trans">Can\'t delete a category with existing transactions. Delete the transactions first, or change their category.</string>
    <string name="notification_title">MyBudget backup</string>
    <string name="notification_text">Happy new month! Would you like to send yourself an email with a backup of your budget data?</string>
    <string name="backup">Backup</string>
</resources>
