<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_importcsv"
        android:title="@string/import_csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exportcsv"
        android:title="@string/export_csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mngcat"
        android:title="@string/manage_categories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mngacc"
        android:title="@string/manage_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:title="Filter"
        app:showAsAction="never" />
</menu>