<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_datefilter"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="24dp" >

    <TextView
        android:id="@+id/prompt_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_datefilter"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <RadioGroup
        android:id="@+id/date_filter_radgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/date_filter_option_payperiod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_period"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:paddingLeft="6dp"/>
        <RadioButton
            android:id="@+id/date_filter_option_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:paddingLeft="6dp"/>
        <RadioButton
            android:id="@+id/date_filter_option_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_period"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:paddingLeft="6dp"/>
        <RadioButton
            android:id="@+id/date_filter_option_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_transactions"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="8dp"
            android:paddingLeft="6dp"/>
    </RadioGroup>
</LinearLayout>