<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.mybudget.ActivityTransaction">
    <RadioGroup
        android:id="@+id/trans_type_radgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <RadioButton
            android:id="@+id/expense_radbut"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/income_radbut"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:id="@+id/transfer_radbut"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/is_reconciled" />
        <CheckBox
            android:id="@+id/edit_reconc"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/trans_date" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:text="Date"
            android:id="@+id/tv_trans_date"
            android:onClick="showDatePickerDialog"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/trans_desc" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@color/secondaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/edit_trans_desc"
            android:hint="Transaction Description"
            android:inputType="textCapSentences" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/trans_est" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@color/secondaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/edit_trans_est"
            android:hint="Establishment"
            android:inputType="textCapWords" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:text="@string/trans_acc" />
        <Spinner
            android:id="@+id/sp_trans_acc"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/trans_amount" />
        <TextView
            android:id="@+id/amount_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@color/secondaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:id="@+id/edit_trans_amount"
            android:hint="00.00"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:text="@string/trans_cat" />
        <Spinner
            android:id="@+id/sp_trans_cat"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/flag_income" />
        <CheckBox
            android:id="@+id/edit_flag_income"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryText"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/flag_recurring" />
        <CheckBox
            android:id="@+id/edit_flag_recurring"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>
